# PF-LoRA

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/data/: beavertails.yaml  protected_mix.yaml  wildguard.yaml  xstest.yaml
configs/eval/: capability_eval.yaml  full_eval.yaml  safety_eval.yaml
configs/model/: llama31_8b_instruct.yaml  mistral7b_instruct.yaml  qwen25_15b_instruct.yaml
configs/train/: ablation.yaml  lora_baseline.yaml  protected_lora.yaml
docs/: mini_paper_protected_function_lora.md
notebooks/: analyze_tradeoff.ipynb  debug_data.ipynb  inspect_spectrum.ipynb
scripts/: 01_prepare_data.sh  02_run_baseline_eval.sh  03_train_lora_baseline.sh  04_collect_activations.sh  05_build_subspaces.sh  06_train_protected_lora.sh  07_run_full_eval.sh  08_make_paper_tables.sh
src/data/: beavertails.py  build_all.py  protected_mix.py  wildguard.py  xstest.py
src/eval/: lm_eval_runner.py  overrefusal_metrics.py  refusal_metrics.py  report.py
src/methods/: projection.py  protected_penalty.py  split_rank.py
src/models/: lora_factory.py
src/reporting/: make_figures.py  make_tables.py
src/subspace/: analyze.py  build_subspaces.py  collect_activations.py  hooks.py  sketch.py  storage.py  svd.py
src/train/: protected_sft.py  sft_baseline.py
src/utils/: checkpointing.py  logging_utils.py  seeding.py
